Tue May 11 11:52:26 BST 2004  Richard Boulton <richard@tartarus.org>

        * clients/queryclient.php: Don't strip newlines out of the data
          we're going to pass to base64_decode(), incase we get a fussy
          implementation that cares about overlong lines.

Tue May 11 11:28:13 BST 2004  Richard Boulton <richard@tartarus.org>

        * source/base64.c: Include newlines in the encoded length returned
          by base64_encode().

Tue May 11 10:22:53 BST 2004  Richard Boulton <richard@tartarus.org>

        * clients/queryclient.php: Fix bug with parsing long data fields,
          and add setCollapse() method.
        * docs/xapian-queryserver.but: Document setCollapse() method.
        * source/queryserver.cpp: Implement collapsekey.

Wed Apr 28 12:02:27 BST 2004  Richard Boulton <richard@tartarus.org>

        * docs/: Split protocol description into a separate file, and
          remove it from the manual for now.

Wed Apr 28 11:43:19 BST 2004  Richard Boulton <richard@tartarus.org>

        * source/base64.h: Remove definition of array as variable sized -
          sunpro compiler didn't like it.
        * source/queryserver.cpp: Include config.h at beginning - needed so
          that MacOSX picks up the definition of socklen_t.

Tue Apr 27 22:53:41 BST 2004  Richard Boulton <richard@tartarus.org>

        * docs/xapian-queryserver.but: Finish documenting the PHP client.
          Only remaining section is the protocol description appendix.

Tue Apr 27 22:11:25 BST 2004  Richard Boulton <richard@tartarus.org>

        * clients/index.php: Reformat to match the example in the manual.
        * clients/xapian-queryclient.php: Remove default argument on
          constructor of Enquiry object.
        * docs/xapian-queryserver.but: Mostly documented the PHP client.
        * source/queryserver.cpp: Add a '#' after the last hit, so that
          we can easily notice it in the PHP client.
